--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -336,42 +336,11 @@
     </div>
 </div>
 <!-- / Inner Wrapper 2-->
-<footer>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Inmobiliaria</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="header-social-icons navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i
-                                class="fab fa-facebook"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fab fa-dribbble"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i
-                                class="fab fa-github"></i></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</footer>
 
+<div th:replace="client/fragments/footer::standard-footer"></div>
 
-<script type="text/javascript" th:src="@{/assets/js/general/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
-<script type="text/javascript" th:src="@{/assets/js/general/wNumb.js}"></script>
-<script type="text/javascript" th:src="@{/assets/js/general/popper.min.js}" crossorigin="anonymous"></script>
-<script type="text/javascript" th:src="@{/assets/js/general/bootstrap.min.js}" crossorigin="anonymous"></script>
-<script type="text/javascript" th:src="@{/assets/js/general/shards.min.js}"></script>
-<script type="text/javascript" th:src="@{/assets/js/general/jquery.sharrre.min.js}"></script>
+<div th:replace="client/fragments/footer::script-files"></div>
+
 <script type="text/javascript" th:src="@{/assets/js/general/slick.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/index/slick-config.js}"></script>
 
