--- a/src/main/resources/templates/client/fragments/navbar.html
+++ b/src/main/resources/templates/client/fragments/navbar.html
@@ -22,7 +22,7 @@
     <div class="col-md-8 offset-md-2 col-sm-0">
         <ul id="menu-top-index" class="navbar-nav d-flex flex-row justify-content-around text-center">
             <li class="nav-item w-100 active">
-                <a class="nav-link title-help-text-md" href="#">Inicio</a>
+                <a class="nav-link title-help-text-md" th:href="@{/}">Inicio</a>
             </li>
             <li class="nav-item w-100">
                 <a class="nav-link title-help-text-md" href="#">Mi cuenta</a>
@@ -31,7 +31,7 @@
                 <a class="nav-link title-help-text-md" href="#">Nosotros</a>
             </li>
             <li class="nav-item w-100">
-                <a class="nav-link title-help-text-md" href="#">Contáctanos</a>
+                <a class="nav-link title-help-text-md" th:href="@{/contact-us}">Contáctanos</a>
             </li>
         </ul>
     </div>
@@ -44,7 +44,7 @@
     <div class="collapse navbar-collapse rr-flex" id="navbar-nav-dropdown-commun">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link" th:href="@{/}">Inicio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Mi cuenta</a>
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="#">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contáctanos</a>
+                <a class="nav-link" th:href="@{/contact-us}">Contáctanos</a>
             </li>
 
         </ul>
