--- a/src/main/resources/templates/client/fragments/navbar.html
+++ b/src/main/resources/templates/client/fragments/navbar.html
@@ -22,16 +22,16 @@
     <div class="col-md-8 offset-md-2 col-sm-0">
         <ul id="menu-top-index" class="navbar-nav d-flex flex-row justify-content-around text-center">
             <li class="nav-item w-100 active">
-                <a class="nav-link title-help-text-md" th:href="@{/}">Inicio</a>
+                <a class="index-nav-title nav-link title-help-text-md" th:href="@{/}">Inicio</a>
             </li>
             <li class="nav-item w-100">
-                <a class="nav-link title-help-text-md" href="#">Mi cuenta</a>
+                <a class="index-nav-title nav-link title-help-text-md" href="#">Mi cuenta</a>
             </li>
             <li class="nav-item w-100">
-                <a class="nav-link title-help-text-md" href="#">Nosotros</a>
+                <a class="index-nav-title nav-link title-help-text-md " href="#">Nosotros</a>
             </li>
             <li class="nav-item w-100">
-                <a class="nav-link title-help-text-md" th:href="@{/contact-us}">Contáctanos</a>
+                <a class="index-nav-title nav-link title-help-text-md " th:href="@{/contact-us}">Contáctanos</a>
             </li>
         </ul>
     </div>
