--- a/src/main/resources/static/assets/css/shards.css
+++ b/src/main/resources/static/assets/css/shards.css
@@ -1481,7 +1481,7 @@ i.material-icons {
 }
 
 .dropdown-menu {
-    z-index: ;
+    z-index: 3;
     min-width: 10rem;
     padding: .5rem 0;
     margin: 0 0 0;
